--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
         </div>
     </div>
 
-
     <div class="hero-container">
         <div class="hero container">
             <div class="hero-txt">
@@ -30,9 +29,55 @@
             </div>
             <img id="hero-img" src="img/group.jpg" alt="Group of students">
         </div>
-
     </div>
 
+    <div class="info-container">
+        <div class="container">
+            <h1 class="info-heading">Some random information.</h1>
+            <div class="cards">
+                <div class="card">
+                    <img src="img/person-one.jpg" alt="" class="info-img">
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                <div class="card">
+                    <img src="img/person-two.jpg" alt="" class="info-img">
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                <div class="card">
+                    <img src="img/person-three.jpg" alt="" class="info-img">
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                <div class="card">
+                    <img src="img/person-four.jpg" alt="" class="info-img">
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="quote-container">
+        <div class="quote container">
+            <p class="phrase">
+                This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up
+                space, or maybe people will actually read it. Who knows? All I know is that it looks nice.
+            </p>
+            <p class="source">-Thor, God of Thunder</p>
+        </div>
+    </div>
+
+    <div class="cta-container">
+        <div class="cta container">
+            <div class="cta-txt">
+                <h3>Call to action! It's time!</h3>
+                <p>Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <button class="btn cta-btn">Sign up</button>
+        </div>
+    </div>
+
+    <div class="footer-container">
+        <p>Copyright © The Odin Project 2021</p>
+    </div>
 
 </body>
 </html>
